--- a/OHET_Project/OHET_Project/Views/Rules/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Rules/Details.cshtml
@@ -4,47 +4,42 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special"></p>
+                <h2>Rule Detail</h2>
+            </header>
+        </div>
+        <div class="12u$">
+            Title
+            @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+        <br />
+        <div class="12u$">
+            Description
+            @Html.TextAreaFor(model => model.description, new { @class = "form-control", disabled = "disabled", @rows = 12 })
+        </div>
 
-<div>
-    <h4>Rule</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Content.ApplicationUserId)
-        </dt>
+        <br />
 
-        <dd>
-            @Html.DisplayFor(model => model.Content.ApplicationUserId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.description)
-        </dd>
-
-    </dl>
-</div>
-@if (Model.Content.ApplicationUserId == ViewBag.userId)
-{
-    <p>
-        @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
-    </p>
-}
-else
-{
-    <p>
-        @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
-    </p>
-}
+        <footer class="align-center">
+            @if (Model.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Edit", "Rules", new { id = Model.IDRule })" class="button alt">Edit</a>
+                <a href="@Url.Action("Delete", "Rules", new { id = Model.IDRule })" class="button alt">Delete</a>
+            }
+        </footer>
+        <div class="align-center">
+            @if (Model.Content.ApplicationUserId == ViewBag.userId)
+            {
+                @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+            }
+            else
+            {
+                @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
+            }
+        </div>
+    </div>
+</section>
