--- a/OHET_Project/OHET_Project/Views/Abilities/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Abilities/Delete.cshtml
@@ -4,45 +4,35 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Ability</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Class.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Class.name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.conceptLvl)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.conceptLvl)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Details", "Classes", new { id = Model.IDClass }, new { })
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special">Are you sure you want to delete this ability?</p>
+                <h2>Delete Ability</h2>
+            </header>
         </div>
-    }
-</div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="12u$">
+                Concept Level
+                <input type="text" value="@Model.conceptLvl" disabled="disabled" />
+            </div>
+            <br />
+            <div class="12u$">
+                Description
+                @Html.TextAreaFor(model => model.description, new { @class = "form-control", disabled = "disabled", @rows = 12 })
+            </div>
+
+            <br />
+
+            <footer class="align-center">
+                <input type="submit" value="Delete" class="btn btn-default" />
+            </footer>
+        }
+        <div class="align-center">
+            @Html.ActionLink("Back to Class", "Details", "Classes", new { id = Model.IDClass }, new { })
+        </div>
+    </div>
+</section>
