--- a/OHET_Project/OHET_Project/Views/Items/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Details.cshtml
@@ -4,7 +4,57 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special"></p>
+                <h2>Item Details</h2>
+            </header>
+        </div>
+        <div class="12u$">
+            Name
+            @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+        <br />
+        <div class="12u$">
+            Cost
+            @Html.EditorFor(model => model.cost, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+        </div>
+        <br />
+        <div class="12u$">
+            Concept Level
+            <input type="text" value="@Model.conceptLvl" disabled="disabled" />
+        </div>
+        <br />
+        <div class="12u$">
+            Description
+            @Html.TextAreaFor(model => model.description, new { @class = "form-control", disabled = "disabled", @rows = 12 })
+        </div>
+
+        <br />
+
+        <footer class="align-center">
+            @if (Model.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Edit", "Items", new { id = Model.IDItem }) class="button alt">Edit</a>
+                    <a href="@Url.Action("Delete", "Items", new { id = Model.IDItem }) class="button alt">Delete</a>
+            }
+        </footer>
+        <div class="align-center">
+            @if (Model.Content.ApplicationUserId == ViewBag.userId)
+            {
+                @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+            }
+            else
+            {
+                @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
+            }
+        </div>
+    </div>
+</section>
+
+
 
 <div>
     <h4>Item</h4>
