Character-Sheet-IndexEdit: Increased max query string in web.config, changes in character sheet view

--- a/OHET_Project/OHET_Project/Content/bootstrap.css
+++ b/OHET_Project/OHET_Project/Content/bootstrap.css
@@ -250,6 +250,7 @@ table {
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
+    overflow: scroll;
   }
   thead {
     display: table-header-group;
