--- a/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
@@ -1,10 +1,10 @@
-﻿@model OHET_Project.Models.models.Hero 
+﻿@model OHET_Project.Models.models.Hero
 
 @{
     ViewBag.Title = "Details";
 }
 
-@{ 
+@{
     string style = "half0";
 
     switch (Model.Class.name)
@@ -17,6 +17,8 @@
         case "Bard": style = "half5"; break;
         default: style = "half6"; break;
     }
+
+    string backgroundString = Model.background + "\n\n" + Model.appearance + "\n\n" + Model.character;
 }
 
 <!-- TYTUŁ -->
@@ -36,93 +38,80 @@
         <p class="detail" style="text-align:center">@Html.DisplayFor(m => m.description)</p>
         <div class="content">
             <div class="main-cont cont">
-                <form action="#" method="post" enctype="multipart/form-data">
+                <div class="stats">
+                    <div>
+                        <label for="armor">DR Armor</label>
+                        <input type="number" id="armor" class="inpt number" value="0">
+                    </div>
+                    <div>
+                        <label for="coins">Coins</label>
+                        <input type="number" name="coins" id="coins" class="inpt number" required="required" placeholder="0" value=@Model.gold>
+                    </div>
+                    <div>
+                        <label for="exp">Experience points</label>
+                        <input type="number" name="exp" id="exp" class="inpt number" required="required" placeholder="0" value=@Model.exp>
+                    </div>
+                </div>
+                <hr>
+                <div class="stats abilities">
+                    <div>
+                        <label for="str">STR</label>
+                        <div id="str" class="stat" contenteditable="true">@Html.DisplayFor(m => m.StrAttribute)</div>
+                    </div>
+                    <div>
+                        <label for="dex">DEX</label>
+                        <div id="dex" class="stat" contenteditable="true">@Html.DisplayFor(m => m.DexAttribute)</div>
+                    </div>
+                    <div>
+                        <label for="con">CON</label>
+                        <div id="con" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ConAttribute)</div>
+                    </div>
+                </div>
+                <div class="stats abilities">
+                    <div>
+                        <label for="int">INT</label>
+                        <div id="int" class="stat" contenteditable="true">@Html.DisplayFor(m => m.IntAttribute)</div>
+                    </div>
+                    <div>
+                        <label for="wis">WIS</label>
+                        <div id="wis" class="stat" contenteditable="true">@Html.DisplayFor(m => m.WisAttribute)</div>
+                    </div>
+                    <div>
+                        <label for="cha">CHA</label>
+                        <div id="cha" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ChaAttribute)</div>
+                    </div>
+                </div>
+                <hr>
 
-                    <div class="stats">
-                        <div>
-                            <label for="armor">DR Armor</label>
-                            <input type="number" id="armor" class="inpt number" value="0">
-                        </div>
-                        <div>
-                            <label for="coins">Coins</label>
-                            <input type="number" name="coins" id="coins" class="inpt number" required="required" placeholder="0" value=@Model.gold>
-                        </div>
-                        <div>
-                            <label for="exp">Experience points</label>
-                            <input type="number" name="exp" id="exp" class="inpt number" required="required" placeholder="0" value=@Model.exp>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="stats abilities">
-                        <div>
-                            <label for="str">STR</label>
-                            <div id="str" class="stat" contenteditable="true">@Html.DisplayFor(m => m.StrAttribute)</div>
-                        </div>
-                        <div>
-                            <label for="dex">DEX</label>
-                            <div id="dex" class="stat" contenteditable="true">@Html.DisplayFor(m => m.DexAttribute)</div>
-                        </div>
-                        <div>
-                            <label for="con">CON</label>
-                            <div id="con" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ConAttribute)</div>
-                        </div>
-                    </div>
-                    <div class="stats abilities">
-                        <div>
-                            <label for="int">INT</label>
-                            <div id="int" class="stat" contenteditable="true">@Html.DisplayFor(m => m.IntAttribute)</div>
-                        </div>
-                        <div>
-                            <label for="wis">WIS</label>
-                            <div id="wis" class="stat" contenteditable="true">@Html.DisplayFor(m => m.WisAttribute)</div>
-                        </div>
-                        <div>
-                            <label for="cha">CHA</label>
-                            <div id="cha" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ChaAttribute)</div>
-                        </div>
-                    </div>
-                    <hr>
-
-                    <div class="profs">
-                        <h3>Special Abilities</h3>
-                        <ul>
-                            @foreach (var item in Model.Class.abilities)
+                <div class="profs">
+                    <h3>Special Abilities</h3>
+                    <ul>
+                        @foreach (var item in Model.Class.abilities)
+                        {
+                            if (Model.conceptLvl >= @item.conceptLvl)
                             {
-                                if (Model.conceptLvl >= @item.conceptLvl)
-                                {
-                                    <li><span class="bold">HC @item.conceptLvl</span> - <span contenteditable="true">@item.description</span></li>
-                                }
+                                <li><span class="bold">HC @item.conceptLvl</span> - <span contenteditable="true">@item.description</span></li>
                             }
-                        </ul>
-                    </div>
-                    @*
-                    <div class="profs">
-                        <h3>Proficiencies <span class="detail">(+2 Proficiency Bonus)</span></h3>
-                        <ul>
-                            <li><span class="bold">Saving Throws</span> <span contenteditable="true">Dex +5, Int +3</span></li>
-                            <li><span class="bold">Skills</span><span contenteditable="true"> Deception +5, Insight +3, Investigation +3, Perception +5*, Persuasion +5, Sleight of Hand +5, Stealth +7*</span></li>
-                            <li><span class="bold">Tools</span> <span contenteditable="true">disguise kit, poisoner’s kit, thieves’ tools</span></li>
-                            <li><span class="bold">Armor</span> <span contenteditable="true">Light Armor (studded leather)</span></li>
-                            <li><span class="bold">Weapons</span> <span contenteditable="true">simple weapons, hand crossbows, longswords, rapiers, shortswords</span></li>
-                            <li><span class="bold">Senses</span> <span contenteditable="true">passive (Perception) 15</span></li>
-                            <li><span class="bold">Languages</span> <span contenteditable="true">Common, Elvish, Undercommon, thieves’ cant</span></li>
-                        </ul>
-                    </div>
-                    *@
-                </form>
-
+                        }
+                    </ul>
+                </div>
             </div>
+        </div>
+        <div class="profs">
+            <h3>Background Story</h3>
+            <blockquote>@Model.background</blockquote>
         </div>
     </article>
     <div class="@style bg"></div>
 </section>
+
 
 @Scripts_()
 @Styles_()
 
 @helper Styles_()
 {
-    <link href="@Url.Content("~/Content/character_sheet_01.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/character-sheet-08.css")" rel="stylesheet" type="text/css" />
 }
 
 @helper Scripts_()
