--- a/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
@@ -8,19 +8,19 @@
     </div>
     <br />
     <div class="6u 12u$(xsmall)">
-        <input type="text" name="description" id="description", value="" placeholder="Description" />
+        <input type="text" name="description" id="description", value="" placeholder="Koncepcja" />
     </div>
     <br />
     <div class="12u$">
-        <textarea placeholder="Opowiedz nam swoją historię" rows="12"></textarea>
+        <textarea name="background" id="backhround" placeholder="Opowiedz nam swoją historię" rows="12"></textarea>
     </div>
     <br />
     <div class="12u$">
-        <textarea placeholder="Jak wyglądasz, bohaterze?" rows="6"></textarea>
+        <textarea name="appearance" id="appearance" placeholder="Jak wyglądasz, bohaterze?" rows="6"></textarea>
     </div>
     <br />
     <div class="12u$">
-        <textarea placeholder="Opisz jaki jesteś - swój charakter" rows="6"></textarea>
+        <textarea name="character" id="character" placeholder="Opisz jaki jesteś - swój charakter" rows="6"></textarea>
     </div>
 
     <br />
