Character-Sheet-IndexEdit: Added displaying personal data in character sheet details
Updated css style

--- a/OHET_Project/OHET_Project/Content/character-sheet-08.css
+++ b/OHET_Project/OHET_Project/Content/character-sheet-08.css
@@ -43,6 +43,7 @@ body {
                 background-image: url("https://i.imgur.com/aI1hC8a.png");
                 background-size: 440px;
                 width: 45%;
+                min-height: 900px;
                 background-repeat: no-repeat;
                 background-position-x: 90%;
                 background-position-y: 10%;
@@ -60,6 +61,7 @@ body {
                 background-image: url("https://s-media-cache-ak0.pinimg.com/736x/fe/41/d8/fe41d8ac345a409b0d662726149d4a3a.jpg");
                 background-size: 440px;
                 width: 45%;
+                min-height: 900px;
                 background-repeat: no-repeat;
                 background-position-x: 90%;
                 background-position-y: 10%;
@@ -77,6 +79,7 @@ body {
                 background-image: url("https://i.imgur.com/flp0NDB.png");
                 background-size: 440px;
                 width: 45%;
+                min-height: 900px;
                 background-repeat: no-repeat;
                 background-position-x: 90%;
                 background-position-y: 10%;
@@ -94,6 +97,7 @@ body {
                 background-image: url("https://i.imgur.com/SL7UmKX.png");
                 background-size: 440px;
                 width: 45%;
+                min-height: 900px;
                 background-repeat: no-repeat;
                 background-position-x: 90%;
                 background-position-y: 10%;
@@ -111,6 +115,7 @@ body {
                 background-image: url("https://i.imgur.com/jshqRtZ.png");
                 background-size: 440px;
                 width: 45%;
+                min-height: 900px;
                 background-repeat: no-repeat;
                 background-position-x: 90%;
                 background-position-y: 10%;
