--- a/OHET_Project/OHET_Project/Views/Abilities/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Abilities/Edit.cshtml
@@ -4,7 +4,41 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special"></p>
+                <h2>Edit Ability</h2>
+            </header>
+        </div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.IDAbility)
+            @Html.HiddenFor(model => model.IDClass)
+            <div class="12u$">
+                @Html.EditorFor(model => model.conceptLvl, new { htmlAttributes = new { @class = "form-control", placeholder = "Concept Level", type = "text" } })
+                @Html.ValidationMessageFor(model => model.conceptLvl, "", new { @class = "text-danger" })
+            </div>
+            <br />
+            <div class="12u$">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+            </div>
+
+            <br />
+
+            <footer class="align-center">
+                <button type="submit" class="button alt">Edit</button>
+            </footer>
+        }
+    </div>
+    <div class="align-center">
+        @Html.ActionLink("Back to Class", "Details", "Classes", new { id = Model.IDClass }, new { })
+    </div>
+</section>
 
 
 @using (Html.BeginForm())
