--- a/OHET_Project/OHET_Project/Views/Rules/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Rules/Edit.cshtml
@@ -4,63 +4,47 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Rule</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.IDRule)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special"></p>
+                <h2>Edit Rule</h2>
+            </header>
+        </div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.IDRule)
+            @Html.HiddenFor(model => model.IDContent)
+            <div class="12u$">
+                @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control", placeholder = "Title" } })
                 @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+            <br />
+            <div class="12u$">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
-        </div>
-        @*
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDContent, "IDContent", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IDContent", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDContent, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        *@
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
 
-@if (Model.Content.ApplicationUserId == ViewBag.userId)
-{
-    <div>
-        @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+            <br />
+
+            <footer class="align-center">
+                <button type="submit" class="button alt">Edit</button>
+            </footer>
+        }
     </div>
-}
-else
-{
-    <div>
-        @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
+    <div class="align-center">
+        @if (Model.Content.ApplicationUserId == ViewBag.userId)
+        {
+            @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+        }
+        else
+        {
+            @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
+        }
     </div>
-}
+</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
