--- a/OHET_Project/OHET_Project/Views/Heroes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Index.cshtml
@@ -4,67 +4,65 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Class)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.gold)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.exp)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    if (@item.Content.ApplicationUserId == ViewBag.userId)
-    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        @if (@item.description.Split().ToArray().Length <= 20)
+<footer class="align-center">
+    <section id="three" class="wrapper style2">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special">Your own masterpieces!</p>
+                <h2>Character Sheets</h2>
+            </header>
+        </div>
+        @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
         {
-            <td>
-                @item.description
-            </td>
+            <a href="@Url.Action("Create", "Heroes")" class="button alt">Create Hero</a>
         }
-        else
-        {
-            <td>
-                @String.Join(" ", @item.description.Split().Take(20))
-                @Html.ActionLink("...", "Details", new { id = item.IDHero })
-            </td>
-        }
-        <td>
-            @item.Class.name
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.gold)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.exp)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.IDHero }) |
-            @Html.ActionLink("Details", "Details", new { id = item.IDHero }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.IDHero })
-        </td>
-    </tr>
-    }
-}
+    </section>
+</footer>
 
-</table>
+
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+            @foreach (var item in Model.OrderBy(x => x.name))
+            {
+                if (@item.Content.ApplicationUserId == ViewBag.userId)
+                {
+                    <div>
+                        <div class="box">
+                            <div class="image fit">
+                                <img src='@Url.Action("ShowClass", "Image", new { id = item.IDClass })' alt='' />
+                            </div>
+                            <div class="content">
+                                <header class="align-center">
+                                    <p>@item.description</p>
+                                    <h2>@item.name</h2>
+                                </header>
+                                <p class="align-center">
+                                    @if (!string.IsNullOrEmpty(item.background))
+                                    {
+                                        if (item.background.Split().ToArray().Length <= 20)
+                                        {
+                                            @item.background
+                                        }
+                                        else
+                                        {
+                                            @(String.Join(" ", item.background.Split().Take(20)) + "...")
+                                        }
+                                    }
+                                </p>
+                                <footer class="align-center">
+                                    <a href="@Url.Action("Details", "Heroes", new { id = item.IDHero })" class="button alt">Details</a>
+                                    @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
+                                    {
+                                        <a href="@Url.Action("Edit", "Heroes", new { id = item.IDHero })" class="button alt">Edit</a>
+                                        <a href="@Url.Action("Delete", "Heroes", new { id = item.IDHero })" class="button alt">Delete</a>
+                                    }
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+</section>
